mejore el stilo y otras cosas internas

--- a/babbage.html
+++ b/babbage.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-
-    <article>
-        <button onclick="window.location.href='./index.html'">
+    
+    <section>
+        <a href="/index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Charles Babbage</h1>
 
@@ -23,7 +23,8 @@
                 por estos inventos se le considera como una de las primeras personas en concebir la idea de lo que hoy
                 llamaríamos una computadora, por lo que se le considera como "El Padre de la computación". En el Museo
                 de Ciencias de Londres se exhiben partes de sus mecanismos inconclusos. Parte de su cerebro conservado
-                en formol se exhibe en el Royal College of Surgeons of England. Sitio en Londres.​</p>
+                en formol se exhibe en el Royal College of Surgeons of England. Sitio en Londres.
+            ​</p>
             <img src="img/babbage.jpg" alt="Imagen de Babbage">
             <h2>Historia</h2>
             <h3>Primeros años</h3>
@@ -84,8 +85,8 @@
                 aplicó a la Universidad de Edimburgo recomendado por Pierre-Simon Laplace, perdiendo de nuevo el puesto
                 por William Wallace, matemático y astrónomo escocés.
             </p>
-        </button>
-    </article>
+        </a>
+    </section>
 
 </body>
 
