--- a/berners-lee.html
+++ b/berners-lee.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <article>
-        <button onclick="window.location.href='./index.html'">
+    <section>
+        <a href="/index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Tim Berners-Lee</h1>
 
@@ -104,8 +104,8 @@
                 orientación visual. Este aspecto resta capacidad para el intercambio de información entre máquinas
                 reduciendo las posibilidades de acceso a la información de forma sistemática e industrializada.
             </p>
-        </button>
-    </article>
+        </a>
+    </section>
 
 </body>
 
