--- a/clarke.html
+++ b/clarke.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <article>
-        <button onclick="window.location.href='./index.html'">
+    <section>
+        <a href="/index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Arthur C. Clarke</h1>
 
@@ -85,8 +85,8 @@
                 como el que se observa en la cinta de Stanley Kubrick. Como divulgador científico, ha sido siempre
                 comparado por su claridad y amenidad con otro coetáneo, Isaac Asimov.
             </p>
-        </button>
-    </article>
+        </a>
+    </section>
 
 </body>
 
