--- a/hamilton.html
+++ b/hamilton.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <article>
-        <button onclick="window.location.href='./index.html'">
+    <section>
+        <a href="/index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Margaret Hamilton</h1>
 
@@ -86,8 +86,8 @@
                 el que trabajaba el equipo del laboratorio,28​ y posteriormente dirigió y supervisó los desarrollos de
                 la misión de la estación espacial Skylab.
             </p>
-        </button>
-    </article>
+        </a>
+    </section>
 
 </body>
 
