--- a/index.html
+++ b/index.html
@@ -10,26 +10,36 @@
 </head>
 
 <body>
+
     <header>
-        <nav>
-            <h1>Bienvenido al Trabajo Practico de Emanuel Arroyo</h1>
+        <div>
+            <h1>Trabajo Practico de Emanuel Arroyo</h1>
             <h2>Este trabajo practico consiste en hacer un sencillo sitio usando la tecnología de Express</h2>
-            <br>
+        </div>
             <p>Debajo tenemos botones que nos direccionan a una pequeña información sobre grandes heroes y heroinas de
                 la historia de la programación.</p>
+        
+        <nav>
+                <ul>
+                    <li><a href="/babbage.html">Charles Babbage</a></li>
+                    <li><a href="/berners-lee.html">Tim Berners-Lee</a></li>
+                    <li><a href="/clarke.html">Arthur C. Clarke</a></li>
+                    <li><a href="/hamilton.html">Margaret Hamilton</a></li>
+                    <li><a href="/hopper.html">Grace Murray Hopper</a></li>
+                    <li><a href="/lovelace.html">Ada Lovelace</a></li>
+                    <li><a href="/turing.html">Alan Turing</a></li>
+                </ul>
+
+                <!-- <button onclick="window.location.href='/babbage'">Charles Babbage</button>
+                <button onclick="window.location.href='/berners-lee'">Tim Berners-Lee</button>
+                <button onclick="window.location.href='/clarke'">Arthur C. Clarke</button>
+                <button onclick="window.location.href='/hamilton'">Margaret Hamilton</button>
+                <button onclick="window.location.href='/hopper'">Grace Murray Hopper</button>
+                <button onclick="window.location.href='/lovelace'">Ada Lovelace</button>
+                <button onclick="window.location.href='/turing'">Alan Turing</button> -->
         </nav>
-        <main>
-                <button onclick="window.location.href='./babbage.html'">Charles Babbage</button>
-                <button onclick="window.location.href='./berners-lee.html'">Tim Berners-Lee</button>
-                <button onclick="window.location.href='./clarke.html'">Arthur C. Clarke</button>
-                <button onclick="window.location.href='./hamilton.html'">Margaret Hamilton</button>
-                <button onclick="window.location.href='./hopper.html'">Grace Murray Hopper</button>
-                <button onclick="window.location.href='./lovelace.html'">Ada Lovelace</button>
-                <button onclick="window.location.href='./turing.html'">Alan Turing</button>
-        </main>
 
     </header>
-    <h1></h1>
 
 </body>
 
