--- a/lovelace.html
+++ b/lovelace.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <article>
-        <button onclick="window.location.href='./index.html'">
+    <section>
+        <a href="/index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Ada Lovelace</h1>
 
@@ -162,8 +162,8 @@
                     la existencia de ceros o estado neutro en las tarjetas perforadas siendo que las tarjetas
                     representaban para la máquina de Babbage números decimales y no binarios (8 perforaciones
                     equivaldrían entonces a 8 unidades).</p>
-                </button>
-    </article>
+                </a>
+            </section>
 
 </body>
 
