--- a/turing.html
+++ b/turing.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <article>
+    <section>
 
-        <button onclick="window.location.href='./index.html'">
+        <a href="/index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Alan Turing</h1>
 
@@ -100,8 +100,8 @@
                 posteriormente, fue responsable de un centro de estudios e investigaciones matemáticas entre 1931 y
                 1934. En 1935 Turing fue nombrado profesor del King's College.
             </p>
-        </button>
-    </article>
+        </a>
+    </section>
 
 </body>
 
