--- a/hopper.html
+++ b/hopper.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <article>
-        <button onclick="window.location.href='./index.html'">
+    <section>
+        <a href="/index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Grace Murray Hopper</h1>
 
@@ -61,8 +61,8 @@
                 la presencia de las mujeres en el mundo tecnológico.17​. Recibió más de 40 doctorados honorarios y un
                 destructor de la marina estadounidense, el USS Hopper, lleva su nombre.
             </p>
-        </button>
-    </article>
+        </a>
+    </section>
 </body>
 
 </html>
