--- a/hopper.html
+++ b/hopper.html
@@ -11,7 +11,7 @@
 
 <body>
     <section>
-        <a href="/index.html">
+        <a href="./index.html">
             <h2 class="h2-unico">Click en cualquier parte para volver a la pagina principal</h2>
             <h1>Grace Murray Hopper</h1>
 
