--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -21,13 +21,13 @@
         
         <nav>
                 <ul>
-                    <li><a href="/babbage.html">Charles Babbage</a></li>
-                    <li><a href="/berners-lee.html">Tim Berners-Lee</a></li>
-                    <li><a href="/clarke.html">Arthur C. Clarke</a></li>
-                    <li><a href="/hamilton.html">Margaret Hamilton</a></li>
-                    <li><a href="/hopper.html">Grace Murray Hopper</a></li>
-                    <li><a href="/lovelace.html">Ada Lovelace</a></li>
-                    <li><a href="/turing.html">Alan Turing</a></li>
+                    <li><a href="./babbage.html">Charles Babbage</a></li>
+                    <li><a href="./berners-lee.html">Tim Berners-Lee</a></li>
+                    <li><a href="./clarke.html">Arthur C. Clarke</a></li>
+                    <li><a href="./hamilton.html">Margaret Hamilton</a></li>
+                    <li><a href="./hopper.html">Grace Murray Hopper</a></li>
+                    <li><a href="./lovelace.html">Ada Lovelace</a></li>
+                    <li><a href="./turing.html">Alan Turing</a></li>
                 </ul>
 
                 <!-- <button onclick="window.location.href='/babbage'">Charles Babbage</button>
