--- a/clarke.html
+++ b/clarke.html
@@ -40,7 +40,8 @@
                 artículo técnico Extra-terrestrial Relays en la revista especializada Wireless World, en el cual sentó
                 las bases de los satélites artificiales en órbita geoestacionaria (llamada, en su honor, órbita Clarke),
                 una de sus grandes contribuciones a la ciencia del siglo XX. Este trabajo le valió numerosos premios,
-                becas y reconocimientos. </p>
+                becas y reconocimientos.
+            </p>
             <p>
                 En ese período estudió matemáticas y física en el prestigioso King's College de Londres, estudios que
                 finalizó con honores. También ejerció varios años como presidente de la Sociedad Interplanetaria
